# cpp-osporting

./: Makefile.am  README.md  autogen.sh  configure.ac  keywords.txt  library.json  library.properties  platformio.ini  submodule-commit.sh  submodule-update.sh  update-submod.sh
doc/: Doxyfile.in  Makefile.am  genheader.tex
examples/: Makefile.am
examples/testos/: Makefile.am  testos.cpp  testos.ino
src/: Makefile.am  getline.c  getline.h  getutf8.c  getutf8.h  hexdump.h  osporting.h  ringbuffer.c  ringbuffer.h  ugdebug.cpp  ugdebug.h  ugosarduino.c  ugosarduino.h  ugosbase.h  ugostime.c  ugostime.h  ugostypes.h  ugstring.c  ugstring.h
tests/: Makefile.am
